deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdc-metadata
  labels:
    app: sdc-metadata
spec:
  type: ClusterIP
  selector:
    app: sdc-metadata
  ports:
    - name: http
      port: 5000
      targetPort: http
